# xlforge

./: .gitignore  PROJECT.md  README.md  pyproject.toml  test_sample.xlsx
.claude/: settings.local.json
.github/workflows/: build.yml  format.yml  lint.yml  types.yml
docs/: ARCHITECTURE.md  PROJECT.md  README.md  batch.md  context.md  examples.md  reference.md
docs/architecture/: oop.md
docs/commands/: app.md  cell.md  chart.md  checkpoint.md  column-row.md  data.md  file.md  format.md  protection.md  semantic.md  sheet.md  sql.md  table.md  validation.md  watch.md
docs/testing/: README.md
patterns/: README.md  dunder-methods.md
reports/: CODE_REVIEW.md
tests/: conftest.py  test_commands.py  test_result.py
tests/unit/: test_cell_ref.py  test_cell_value.py  test_result.py
xlforge/: __init__.py  __main__.py  result.py
xlforge/commands/: app.py  cell.py  chart.py  context.py  csv_cmd.py  data.py  file.py  format_condition.py  named_range.py  pivot.py  properties.py  protection.py  range.py  rowcol.py  sheet.py  style.py  table.py  validation.py
xlforge/core/: errors.py  utils.py
xlforge/core/engines/: __init__.py  base.py  openpyxl_engine.py  selector.py  xlwings_engine.py
xlforge/core/entities/: __init__.py  range.py  sheet.py  workbook.py
xlforge/core/services/: __init__.py  cell_service.py
xlforge/core/types/: __init__.py  cell_ref.py  cell_value.py  result.py  value_type.py
