[project]
name = "xlforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "openpyxl>=3.1.0",
]

[project.scripts]
xlforge = "xlforge:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["xlforge*"]
exclude = ["public*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-openpyxl>=3.1.0",
]
